# SensorNode-AVR

./: .gitignore  CMakeLists.txt  README.md  annotated.html  classMovingAverage-members.html  classMovingAverage.html  classes.html  dir_5194e5fea318fda12687127c23f8aba1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  index.html  main_8cpp.html  moving__average_8h.html  moving__average_8h_source.html  platformio.ini
.github/workflows/: ci.yml
build_tests/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_test_discovery_5ec688e9da.json  run_tests[1]_include.cmake  run_tests[1]_tests.cmake
docs/: Doxyfile
search/: all_1.js  all_3.js  classes_0.js  files_0.js  functions_0.js  functions_3.js  searchdata.js
src/: main.cpp
src/app/: moving_average.h
src/drivers/: buzzer_driver.h  dht11_driver.h  interfaces.h  relay_driver.h  ssd1306_driver.h
src/hal/: adc_hal.h  gpio_hal.h  i2c_hal.h  pwm_hal.h  uart_hal.cpp  uart_hal.h
tests/mocks/: mock_sensor.h
tests/unit/: test_moving_average.cpp
